# dearreader

./: .coverage  .env.example  .gitignore  CLINE_INPROGRESS.md  CONTRIBUTING.md  CURRENTSTATUS.md  DOCKER_README.md  Dockerfile  PDF_STATUS.md  README.md  TEST_README.md  app.py  config.yaml  config.yaml.example  crawl_pipeline.yaml  crawl_pipeline.yaml.sample  dearreader  demo.csv  demo.py  dev.sh  docker-compose.yml  log.sh  minimal-server.js  package.json  pyproject.toml  requirements.txt  run.sh  setup.sh  setup_demo.sh  speedtest.py  tasks.py  tesh.sh.bak  test.csv  test.py  test.sh
docker/: Dockerfile  Dockerfile.dev
docs/: CLINE_INPROGRESS.md  DOCKER_README.md  QUICKSTART.md  README.md  TEST_HANGING_PREVENTION.md  api.md  architecture.md  literacy.md  migration.md  setup.md  troubleshooting.md
js/: .eslintignore  .eslintrc.cjs  ai-parsing-demo.js  curl-simulation.js  debug-config.js  debug-consumers.js  debug-test.js  debug-yaml.js  demo-task-ai.js  diag.sh  esbuild-check.mjs  eslint.config.cjs  health-check.sh  kill-all-tests.sh  package-lock.json  package.json  pdf-demo.js  pdf-ocr-openai-demo.js  run-tests.sh  test-aggressive.sh  test-ai-simple.js  test-comprehensive.js  test-config-yaml.js  test-ip-connection.js  test-json-endpoint.ts  test-pdf.js  (+6 more)
py/: Dockerfile.dev  README.md  app.py  demo.py  openrefine-api-limit-check.py  openrouter-models.py  pyproject.toml  requirements-dev.txt  requirements.txt  speedtest.py
py/tests/: conftest.py  test_app.py  test_app_utils.py  test_demo.py  test_demo_api.py  test_demo_integration.py  test_run_cmd_and_ports.py
(+225 files in other folders)
