[project]
name = "dearreader-py"
version = "0.0.1"
description = "Python client and utilities for DearReader API"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0",
    "PyYAML>=6.0",
    "psutil>=5.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.scripts]
demo = "demo:main"
speedtest = "speedtest:main"

[project.urls]
Homepage = "https://github.com/postphotos/dearreader"
Repository = "https://github.com/postphotos/dearreader"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
